// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерится для проданного объявления и не показать время, если объявление о продаже нового авто 1`] = `
<div
  className="OfferAmpCardSold"
>
  <div
    className="OfferAmpCardSold__info"
  >
    <div
      className="OfferAmpCardSold__icon"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="OfferAmpCardSold__infoCol"
    >
      <div
        className="OfferAmpCardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="OfferAmpCardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="OfferAmpCardSold__description OfferAmpCardSold__description_mobile"
      >
         
      </div>
    </div>
  </div>
  
</div>
`;

exports[`должен отрендерится для проданного объявления и не показать время, если объявление продавалось больше 10 дней 1`] = `
<div
  className="OfferAmpCardSold"
>
  <div
    className="OfferAmpCardSold__info"
  >
    <div
      className="OfferAmpCardSold__icon"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="OfferAmpCardSold__infoCol"
    >
      <div
        className="OfferAmpCardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="OfferAmpCardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="OfferAmpCardSold__description OfferAmpCardSold__description_mobile"
      >
         
      </div>
    </div>
  </div>
  
</div>
`;

exports[`должен отрендерится для проданного объявления и показать время, если объявление продавалось меньше 10 дней 1`] = `
<div
  className="OfferAmpCardSold"
>
  <div
    className="OfferAmpCardSold__info"
  >
    <div
      className="OfferAmpCardSold__icon"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="OfferAmpCardSold__infoCol"
    >
      <div
        className="OfferAmpCardSold__title"
      >
        Этот автомобиль уже продан
      </div>
      <div
        className="OfferAmpCardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="OfferAmpCardSold__description OfferAmpCardSold__description_mobile"
      >
        3 часа от публикации до продажи
      </div>
    </div>
  </div>
  <div
    className="OfferAmpCardSold__time"
  >
    <div
      className="OfferAmpCardSold__title"
    >
      3 часа
    </div>
    <div
      className="OfferAmpCardSold__description"
    >
      от публикации до продажи
    </div>
  </div>
</div>
`;

exports[`должен учитывать род продаваемого транспорта 1`] = `
<div
  className="OfferAmpCardSold"
>
  <div
    className="OfferAmpCardSold__info"
  >
    <div
      className="OfferAmpCardSold__icon"
    >
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "svgID",
          }
        }
      />
    </div>
    <div
      className="OfferAmpCardSold__infoCol"
    >
      <div
        className="OfferAmpCardSold__title"
      >
        Эта сельскохозяйственная техника уже продана
      </div>
      <div
        className="OfferAmpCardSold__description"
      >
        Объявление доступно только по прямой ссылке
      </div>
      <div
        className="OfferAmpCardSold__description OfferAmpCardSold__description_mobile"
      >
        3 часа от публикации до продажи
      </div>
    </div>
  </div>
  <div
    className="OfferAmpCardSold__time"
  >
    <div
      className="OfferAmpCardSold__title"
    >
      3 часа
    </div>
    <div
      className="OfferAmpCardSold__description"
    >
      от публикации до продажи
    </div>
  </div>
</div>
`;

exports[`не должен рендерится для активного объявления 1`] = `null`;

exports[`не должен рендерится для владельца 1`] = `null`;
